--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="intro">
             	<img src="assets/images/banner.jpeg" alt="Banner" width="100%" height="">
                 <p class="name">
-                    Hey, what's up I am <strong>Emmanuel Kuye.</strong>
+                    Hello, I am <strong>Emmanuel Kuye.</strong>
                     I am a Software Engineer In Quality.
                 </p>
                 <p class="details">
