--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     
                 </p>
                 <p class="details">
-                	<strong>Tech Stack (some tools i use)</strong>
+                	<strong>Tech Stack (some tools I use)</strong>
                 	<ol>> Python</ol>
                 	<ol>> Selenium</ol>
                 	<ol>> Appium</ol>
