--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                 </p>
             </div>
 
-            <div class="heading">Projects</div>
+	    <div class="heading"><strong>Projects:</strong></div>
 
-            <div class="projects">
+            <div class="<projects">
                 <div class="project">
                     <a target="_blank" href="https://snapupng.pythonanywhere.com/" class="project-name" rel="noopener"
                         title="Link to Shopping Companion App">Shopping Companion</a>
