--- a/index.html
+++ b/index.html
@@ -311,7 +311,12 @@
                         title="Link to github of portfolio">portfolio</a>
                 </div>
             </div>
-
+	    <div class="project">
+	    <img src="assets/images/image1.png" alt="Banner" width="50%" height="">
+	    </div>
+	    <div class="project">
+	    <img src="assets/images/image2.png" alt="Banner" width="50%" height="">
+	    </div>
             <span class="heading">Contact Me</span>
             <ul>
                 
