--- a/index.html
+++ b/index.html
@@ -307,15 +307,15 @@
                         I built this website using HTML and CSS to help showcase my stuff.
                         It's very accessible.
                     </span>
-                    <a target="_blank" href="https://github.com/emmanuelmarkjr/emmanuelmarkjr.github.io" class="github-link" rel="noopener"
+                    <a target="_blank" href="https://github.com/kuyr" class="github-link" rel="noopener"
                         title="Link to github of portfolio">portfolio</a>
                 </div>
             </div>
 	    <div class="project">
-	    <img src="assets/images/image1.png" alt="Banner" width="50%" height="">
+	    <img src="assets/images/page1.PNG" alt="screenshot" width="50%" height="">
 	    </div>
 	    <div class="project">
-	    <img src="assets/images/image2.png" alt="Banner" width="50%" height="">
+	    <img src="assets/images/page2.PNG" alt="screeshot" width="50%" height="">
 	    </div>
             <span class="heading">Contact Me</span>
             <ul>
