--- a/index.html
+++ b/index.html
@@ -312,10 +312,16 @@
                 </div>
             </div>
 	    <div class="project">
-	    <img src="assets/images/page1.PNG" alt="screenshot" width="50%" height="">
+		     <a>
+                        rel="noopener" title="Screenshot">Valid Login Test</a>
+                    <span class="project-desc">
+                       A screenshot of the valid/invalid login test carried out on the "my community" application.
+                    </span>
+	    <img src="assets/images/page1.PNG" alt="screenshot" width="100%" height="">
 	    </div>
+	    
 	    <div class="project">
-	    <img src="assets/images/page2.PNG" alt="screeshot" width="50%" height="">
+	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="">
 	    </div>
             <span class="heading">Contact Me</span>
             <ul>
