--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
                 </div>
             </div>
 	    <div class="project">
-		     <a>
-                        rel="noopener" title="Screenshot">Valid Login Test</a>
+		     <a>Valid Login Test</a>
                     <span class="project-desc">
                        A screenshot of the valid/invalid login test carried out on the "my community" application.
                     </span>
@@ -321,6 +320,9 @@
 	    </div>
 	    
 	    <div class="project">
+		    <a>Performance Test</a>
+		    <span class="project-desc">
+			    A screenshot of a performance test carried out on the "my community" application showing the standard deviation, percentage errors, through put and some other metrics.
 	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="">
 	    </div>
             <span class="heading">Contact Me</span>
