--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
             </div>
 	    <div class="project">
-		     <a>Valid Login Test</a>
+		     <h2>Valid Login Test</h2>
                     <span class="project-desc">
                        A screenshot of the valid/invalid login test carried out on the "my community" application.
                     </span>
@@ -320,7 +320,7 @@
 	    </div>
 	    
 	    <div class="project">
-		    <a>Performance Test</a>
+		    <h2>Performance Test</h2>
 		    <span class="project-desc">
 			    A screenshot of a performance test carried out on the "my community" application showing the standard deviation, percentage errors, through put and some other metrics.
 	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="">
