--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
                     <span class="project-desc">
                        A screenshot of the valid/invalid login test carried out on the "my community" application.
                     </span>
-	    <img src="assets/images/page1.PNG" alt="screenshot" width="100%" height="100">
+	    <img src="assets/images/page1.PNG" alt="screenshot" width="100%" height="100%">
 	    </div>
 	    
 	    <div class="project">
 		    <h3>Performance Test</h3>
 		    <span class="project-desc">
 			    A screenshot of a performance test carried out on the "my community" application showing the standard deviation, percentage errors, through put and some other metrics.
-	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="100">
+	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="100%">
 	    </div>
             <span class="heading">Contact Me</span>
             <ul>
