--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 	    <div class="project">
 		     <h3>Valid Login Test</h3>
                     <span class="project-desc">
-                       A screenshot of the valid/invalid login test carried out on the "my community" application.
+                       A screenshot of the valid/invalid login test carried out on the "my community" application with Groovy on Katalon Suite.
                     </span>
 	    <img src="assets/images/page1.PNG" alt="screenshot" width="100%" height="100%">
 	    </div>
@@ -322,7 +322,7 @@
 	    <div class="project">
 		    <h3>Performance Test</h3>
 		    <span class="project-desc">
-			    A screenshot of a performance test carried out on the "my community" application showing the standard deviation, percentage errors, through put and some other metrics.
+			    A screenshot of a performance test carried out on the "my community" application showing the standard deviation, percentage errors, through put and some other metrics on JMeter.
 	    <img src="assets/images/page2.PNG" alt="screeshot" width="100%" height="100%">
 	    </div>
             <span class="heading">Contact Me</span>
