--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 </div>
             </div>
 	    <div class="project">
-		     <h3>Valid Login Test</h3>
+		     <h3>Valid/Invalid Login Test</h3>
                     <span class="project-desc">
                        A screenshot of the valid/invalid login test carried out on the "my community" application with Groovy on Katalon Suite.
                     </span>
