--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 
                 <li><a href="https://github.com/kuyr" rel="noopener" title="Link to my github account">Github</a></li>
                 
-                <li><a href="resume.pdf" download="Emmanuel Kuyes's Resume" rel="noopener" title="Download my resume in PDF format">Download Resume</a></li>
+                <li><a href="EmmanuelKuyesResume.pdf" download="Emmanuel Kuyes's Resume" rel="noopener" title="Download my resume in PDF format">Download Resume</a></li>
               <li><a href="https://www.linkedin.com/in/emmanuel-kuye" rel="noopener" title="Link to my linkedin account">LinkedIn</a></li>
                 <li><a href="mailto:kuyeemmanuel@rocketmail.com" rel="noopener" title="Send me an email">Email</a></li>
             </ul>
